methods.args.MethodsArgs.scala.error
Erreur de compilation :
MethodsArgs:8: error: not found: value nbPAs
    for (k <- 1 to nbPAs){avance();}
                   ^