methods.args.MethodsArgs.scala.code




def move(nbPas:Int,versLAvant:Boolean) = {
  if(versLAvant){
    for (k <- 1 to nbPAs){avance();}
  }
  
  
}